Fixes alert width on mobile

--- a/wp-content/themes/select/assets/styles/_base.scss
+++ b/wp-content/themes/select/assets/styles/_base.scss
@@ -72,6 +72,11 @@ caption {
     width:100%;
     height:100vh;
     z-index:0;
+    margin-top: -38px;
+
+    @include screen(md) {
+        margin-top: -19px;
+    }
 
     .alert-close {
         color:$grey;
@@ -96,9 +101,18 @@ caption {
 
     .alert {
         background-color:#fff;
-        max-width:50%;
+        max-width:90%;
         padding:60px;
         z-index:22;
+        
+
+        @include screen(md) {
+            max-width:70%;
+        }
+
+        @include screen(lg) {
+            max-width:50%;
+        }
     }
 
     &.alerted {
